double scroller fix

--- a/src/index.css
+++ b/src/index.css
@@ -125,11 +125,15 @@ All colors MUST be HSL.
 }
 
 @layer base {
-  * {
-    @apply border-border;
+  html,
+  body,
+  #root {
+    height: 100%;
+    overflow: hidden;
   }
 
   body {
     @apply bg-background text-foreground;
   }
 }
+
